--- a/src/login.html
+++ b/src/login.html
@@ -47,7 +47,7 @@
 
 <div>
   <footer class="login-footer">
-    <a href="https://open.spotify.com/playlist/2viaBPnuwOU7LeEfmrCMGn?si=P0rDn_9lQGqZ47eS1Y-xnQ&pi=uyWc0SepQ6eX8&nd=1&dlsi=e172c36d348048ae" target="_blank"> Full Album OST </a>
+    <a href="https://open.spotify.com/album/1P89EVy4va2kLDIgHY2vbc?si=K6Q1RjQ_SimabzEPKStPUQ" target="_blank"> Full Album OST </a>
 
     <div class="linkedin">
       <a href="https://linkedin.com/in/donovanachen" target="_blank"> linkedin.com/in/donovanachen </a>
