--- a/src/home.html
+++ b/src/home.html
@@ -1,95 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Glub World</title>
-  <link rel="stylesheet" href="css/home.css">
-  <link rel="stylesheet" href="css/ocean.css">
-  <link rel="icon" href="assets/sprites/glubglub.gif" type="image/png">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Glub World</title>
+    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/ocean.css" />
+    <link rel="icon" href="assets/sprites/glubglub.gif" type="image/png" />
+  </head>
+  <body>
+    <div id="credits-container" class="hidden">
+      <div class="credits-content">
+        <h1>Glub World</h1>
+        <br /><br />
 
-<div id="credits-container" class="hidden">
-  <div class="credits-content">
-    <h1>Glub World</h1>
-    <br><br>
+        <h2>Directors</h2>
+        <p>Game Director: Donovan Chen</p>
+        <p>Creative Director: Donovan Chen</p>
+        <p>Project Manager: Donovan Chen</p>
+        <p>Art Director: Donovan Chen</p>
+        <br />
 
-    <h2>Directors</h2>
-    <p>Game Director: Donovan Chen</p>
-    <p>Creative Director: Donovan Chen</p>
-    <p>Project Manager: Donovan Chen</p>
-    <p>Art Director: Donovan Chen</p>
-    <br>
+        <h2>Design</h2>
+        <p>Lead Game Designer: Donovan Chen</p>
+        <p>Systems Designer: Donovan Chen</p>
+        <p>Level Designer: Donovan Chen</p>
+        <p>Quest Designer: Donovan Chen</p>
+        <p>UI/UX Designer: Donovan Chen</p>
+        <br />
 
-    <h2>Design</h2>
-    <p>Lead Game Designer: Donovan Chen</p>
-    <p>Systems Designer: Donovan Chen</p>
-    <p>Level Designer: Donovan Chen</p>
-    <p>Quest Designer: Donovan Chen</p>
-    <p>UI/UX Designer: Donovan Chen</p>
-    <br>
+        <h2>Art & Animation</h2>
+        <p>Lead Artist: Donovan Chen</p>
+        <p>Concept Artist: Donovan Chen</p>
+        <p>Character Artist: Donovan Chen</p>
+        <p>Environment Artist: Donovan Chen</p>
+        <p>Animator: Donovan Chen</p>
+        <br /><br /><br />
 
-    <h2>Art & Animation</h2>
-    <p>Lead Artist: Donovan Chen</p>
-    <p>Concept Artist: Donovan Chen</p>
-    <p>Character Artist: Donovan Chen</p>
-    <p>Environment Artist: Donovan Chen</p>
-    <p>Animator: Donovan Chen</p>
-    <br><br><br>
+        <h2>Programming & Engineering</h2>
+        <p>Lead Programmer: Donovan Chen</p>
+        <p>Gameplay Programmer: Donovan Chen</p>
+        <p>Engine Programmer: Donovan Chen</p>
+        <p>AI Programmer: Donovan Chen</p>
+        <p>Graphics Programmer: Donovan Chen</p>
+        <p>Audio Programmer: Donovan Chen</p>
+        <br /><br /><br />
 
-    <h2>Programming & Engineering</h2>
-    <p>Lead Programmer: Donovan Chen</p>
-    <p>Gameplay Programmer: Donovan Chen</p>
-    <p>Engine Programmer: Donovan Chen</p>
-    <p>AI Programmer: Donovan Chen</p>
-    <p>Graphics Programmer: Donovan Chen</p>
-    <p>Audio Programmer: Donovan Chen</p>
-    <br><br><br>
+        <h2>Marketing</h2>
+        <p>Marketing Director: Donovan Chen</p>
+        <p>Public Relations: Donovan Chen</p>
+        <p>Community Manager: Donovan Chen</p>
+        <p>Social Media Manager: Donovan Chen</p>
+        <br /><br /><br />
 
-    <h2>Marketing</h2>
-    <p>Marketing Director: Donovan Chen</p>
-    <p>Public Relations: Donovan Chen</p>
-    <p>Community Manager: Donovan Chen</p>
-    <p>Social Media Manager: Donovan Chen</p>
-    <br><br><br>
+        <h2>Music</h2>
+        <p>Audio Director: Diego Solorzano</p>
+        <p>Composer: Diego Solorzano</p>
 
-    <h2>Music</h2>
-    <p>Audio Director: Diego Solorzano</p>
-    <p>Composer: Diego Solorzano</p>
+        <h2>Voice Actors</h2>
+        <p>Donovan Chen as Meow Meow</p>
+        <p>Donovan Chen as Glub Glub</p>
+        <p>Donovan Chen as Puffy</p>
+        <p>Donovan Chen as Nyatfish</p>
+        <p>Donovan Chen as Finny</p>
+        <p>Donovan Chen as Wallace</p>
 
-    <h2>Voice Actors</h2>
-    <p>Donovan Chen as Meow Meow </p>
-    <p>Donovan Chen as Glub Glub </p>
-    <p>Donovan Chen as Puffy </p>
-    <p>Donovan Chen as Nyatfish</p>
-    <p>Donovan Chen as Finny</p>
-    <p>Donovan Chen as Wallace</p>
+        <br /><br /><br />
 
-    <br><br><br>
+        <h2>Starring</h2>
+        <p>Thuyen Tran as Glub Glub</p>
+        <p>Donovan Chen as Meow Meow</p>
+        <br />
 
-    <h2>Starring</h2>
-    <p>Thuyen Tran as Glub Glub</p>
-    <p>Donovan Chen as Meow Meow</p>
-    <br>
+        <p>With Special Thanks To</p>
+        <p>Diego Solorzano for tirelessly composing the original soundtrack</p>
+        <p>
+          And Thuyen Tran for making all the work into this small video game
+          worth it all
+        </p>
+        <br /><br /><br /><br />
 
-    <p>With Special Thanks To</p>
-    <p>Diego Solorzano for tirelessly composing the original soundtrack</p>
-    <p>And Thuyen Tran for making all the work into this small video game worth it all</p>
-    <br><br><br><br>
+        <h1>The End</h1>
+      </div>
+    </div>
 
-    <h1>The End</h1>
-  </div>
-</div>
+    <div id="final-date-container" class="hidden">
+      <h1>August 7th, 2025</h1>
+      <h1>to another year ahead of us!</h1>
+    </div>
 
-<div id="final-date-container" class="hidden">
-  <h1>August 7th, 2025</h1>
-  <h1>to another year ahead of us!</h1>
-</div>
+    <audio
+      id="background-music"
+      src="assets/sound/waltz_for_a_cat_and_fish.mp3"
+      loop
+      autoplay
+    ></audio>
 
-<audio id="background-music" src="assets/sound/waltz_for_a_cat_and_fish.mp3" loop autoplay></audio>
-
-<script src="js/home.js"></script>
-<script src="js/background_music.js"></script>
-</body>
+    <script src="js/home.js"></script>
+    <script src="js/background_music.js"></script>
+  </body>
 </html>
