--- a/src/music.html
+++ b/src/music.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Music Player</title>
-</head>
-<body>
-<audio src="assets/sound/intro.mp3" autoplay loop></audio>
-</body>
+  </head>
+  <body>
+    <audio src="assets/sound/intro.mp3" autoplay loop></audio>
+  </body>
 </html>
